--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -29,7 +29,7 @@ pipeline {
       }
       steps {
         withCredentials([string(credentialsId: 'SonarQube-Token', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh 'cd /spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+          sh 'cd spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
         }
       }
     }
