--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -6,11 +6,6 @@ pipeline {
     }
   }
   stages {
-    stage('Clean Workspace') {
-      steps {
-        cleanWs()
-      }
-    }
     stage('Checkout') {
       steps {
         sh 'echo passed'
@@ -41,7 +36,7 @@ pipeline {
       }
       steps {
         script {
-            sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
+            sh 'cd spring-boot-app && docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
             docker.withRegistry('https://index.docker.io/v1/', "docker-hub") {
                 dockerImage.push()
@@ -51,17 +46,17 @@ pipeline {
     }
     stage('Update Deployment File') {
         environment {
-            GIT_REPO_NAME = "Jenkins-Zero-To-Hero"
-            GIT_USER_NAME = "iam-veeramalla"
+            GIT_REPO_NAME ="Spring-Boot-CI-CD-Implementation"
+            GIT_USER_NAME = "abhiram3046"
         }
         steps {
             withCredentials([string(credentialsId: 'github', variable: '')]) {
                 sh '''
                     git config user.email "abhiramjampana@gmail.com"
-                    git config user.name "Abhiram varma"
+                    git config user.name "abhiram3046"
                     BUILD_NUMBER=${BUILD_NUMBER}
                     sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" /spring-boot-app-manifests/deployment.yml
-                    git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+                    git add /spring-boot-app-manifests/deployment.yml
                     git commit -m "Update deployment image to version ${BUILD_NUMBER}"
                     git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                 '''
