--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -6,6 +6,11 @@ pipeline {
     }
   }
   stages {
+    stage('Clean Workspace') {
+      steps {
+        deleteDir()
+      }
+    }
     stage('Checkout') {
       steps {
         sh 'echo passed'
