--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
   agent {
     docker {
       image 'abhiram3046/docker-maven-java'
-       args '-v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+       args '-v /var/run/docker.sock:/var/run/docker.sock -u root' // mount Docker socket to access the host's Docker daemon
     }
   }
   stages {
