Refactor Git operations in Jenkins pipeline to clone repository before updating deployment image

--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -52,13 +52,14 @@ pipeline {
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
-                    git config user.email "abhiramjampana@gmail.com"
-                    git config user.name "abhiram3046"
-                    BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" /spring-boot-app-manifests/deployment.yml
-                    git add /spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                git clone https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git
+                cd ${GIT_REPO_NAME}
+                git config user.email "abhiramjampana@gmail.com"
+                git config user.name "abhiram3046"
+                sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
+                git add deployment.yml
+                git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                git push
                 '''
             }
         }
