--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -46,20 +46,21 @@ pipeline {
     }
     stage('Update Deployment File') {
         environment {
-            GIT_REPO_NAME ="Spring-Boot-CI-CD-Implementation"
+            GIT_REPO_NAME ="Spring-Boot-Manifests"
             GIT_USER_NAME = "abhiram3046"
         }
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
-                  
-                    git config user.email "abhiramjampana@gmail.com"
-                    git config user.name "abhiram3046"
-                    BUILD_NUMBER=${BUILD_NUMBER}
-                    sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" spring-boot-app-manifests/deployment.yml
-                    git add spring-boot-app-manifests/deployment.yml
-                    git commit -m "Update deployment image to version ${BUILD_NUMBER}"
-                    git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
+                  git clone https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME}.git
+                  cd ${GIT_REPO_NAME}
+                  git config user.email "abhiramjampana@gmail.com"
+                  git config user.name "abhiram3046"
+                  BUILD_NUMBER=${BUILD_NUMBER}
+                  sed -i "s/replaceImageTag/${BUILD_NUMBER}/g" deployment.yml
+                  git add deployment.yml
+                  git commit -m "Update deployment image to version ${BUILD_NUMBER}"
+                  git push https://${GITHUB_TOKEN}@github.com/${GIT_USER_NAME}/${GIT_REPO_NAME} HEAD:main
                 '''
             }
         }
